infrastructure/controllers/production/cilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hubble.apps.6541333.xyz
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: cilium
  rules:
    - host: hubble.apps.6541333.xyz
      http:
        paths:
          - backend:
              service:
                name: hubble-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hubble.apps.6541333.xyz
      secretName: hubble-apps-ingress
